Fixed that stupid 4px gap below the header image

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ a, img, h1, h2, h3, h4, h5, h6, div, nav, main {
 }
 
 .header-image {
+  display: block;
   width: 100%;
 }
 
